// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage component should be rendered correctly with app infos from registry (not installed) 1`] = `
<div>
  <div
    className="sto-app"
  >
    <Wrapper
      description="Gestionnaire de photos pour Cozy v3"
      editor="Cozy"
      icon="https://mockcozy.cc/registry/photos/icon"
      installed={false}
      installedAppLink={null}
      name="Photos"
      parent="/myapps"
      slug="photos"
      type="webapp"
    />
    <Wrapper
      images={undefined}
      slug="photos"
    />
    <Wrapper
      categories={
        Array [
          "cozy",
        ]
      }
      changes="### NEW!!!

 Now on the cozy-store :tada"
      description="### Features

Enjoy features to grab your data in you Cozy :tada:"
      developer={
        Object {
          "name": "Cozy",
          "url": "https://cozy.io",
        }
      }
      langs={
        Array [
          "en",
          "fr",
        ]
      }
      mobileApps={
        Array [
          Object {
            "type": "ios",
            "url": "",
          },
          Object {
            "type": "android",
            "url": "https://mock.app",
          },
        ]
      }
      version="3.0.0"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with konnector infos from registry (not installed) 1`] = `
<div>
  <div
    className="sto-app"
  >
    <Wrapper
      description="A konnector for trinlane"
      editor="Cozy"
      icon="https://mockcozy.cc/registry/konnector-trinlane/icon"
      installed={false}
      installedAppLink={undefined}
      name="Trinlane"
      parent="/myapps"
      slug="konnector-trinlane"
      type="konnector"
    />
    <Wrapper
      images={undefined}
      slug="konnector-trinlane"
    />
    <Wrapper
      categories={
        Array [
          "transport",
        ]
      }
      changes={undefined}
      description={undefined}
      developer={
        Object {
          "name": "Cozy",
          "url": "https://cozy.io",
        }
      }
      langs={
        Array [
          "fr",
          "en",
        ]
      }
      mobileApps={undefined}
      version={undefined}
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with provided installed app 1`] = `
<div>
  <div
    className="sto-app"
  >
    <Wrapper
      description="Gestionnaire de photos pour Cozy v3"
      editor="Cozy"
      icon="https://mockcozy.cc/registry/photos/icon"
      installed={true}
      installedAppLink="https://photos.mockcozy.cc"
      name="Photos"
      parent="/myapps"
      slug="photos"
      type="webapp"
    />
    <Wrapper
      images={undefined}
      slug="photos"
    />
    <Wrapper
      categories={
        Array [
          "cozy",
        ]
      }
      changes="### NEW!!!

 Now on the cozy-store :tada"
      description="### Features

Enjoy features to grab your data in you Cozy :tada:"
      developer={
        Object {
          "name": "Cozy",
          "url": "https://cozy.io",
        }
      }
      langs={
        Array [
          "en",
          "fr",
        ]
      }
      mobileApps={
        Array [
          Object {
            "type": "ios",
            "url": "",
          },
          Object {
            "type": "android",
            "url": "https://mock.app",
          },
        ]
      }
      version="3.0.0"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with provided installed konnector 1`] = `
<div>
  <div
    className="sto-app"
  >
    <Wrapper
      description="A konnector for trinlane"
      editor="Cozy"
      icon="https://mockcozy.cc/registry/konnector-trinlane/icon"
      installed={true}
      installedAppLink={undefined}
      name="Trinlane"
      parent="/myapps"
      slug="konnector-trinlane"
      type="konnector"
    />
    <Wrapper
      images={undefined}
      slug="konnector-trinlane"
    />
    <Wrapper
      categories={
        Array [
          "transport",
        ]
      }
      changes={undefined}
      description={undefined}
      developer={
        Object {
          "name": "Cozy",
          "url": "https://cozy.io",
        }
      }
      langs={
        Array [
          "fr",
          "en",
        ]
      }
      mobileApps={undefined}
      version={undefined}
    />
  </div>
</div>
`;

exports[`ApplicationPage component should render correctly a spinner if isFetching 1`] = `
<div
  className="sto-app"
>
  <Wrapper
    loadingType="appsFetching"
    middle="true"
    size="xxlarge"
  />
</div>
`;

exports[`ApplicationPage component should render correctly an error message if fetchError 1`] = `
<p
  className="u-error"
>
  Something went wrong when fetching the application informations. Reason: This is a test error
</p>
`;
